log/build_2024-02-07_11-43-35/object_detection/stderr.log
  File "/home/kevin/ros2_airweek/install/object_detection/lib/python3.10/site-packages/object_detection/image_converter.py", line 52
    model.predict(cv_image, save=True, imgsz=320,640)
                                                    ^
SyntaxError: positional argument follows keyword argument

